RF | POM - EntityArithmeticFunction (#693)
* Refactoring code for inheritance with generic, create ArithmeticFunctionOrderPage, ArithmeticFunctionViewPage, fix error EntityArithmeticFunction1Test